--- a/styles.css
+++ b/styles.css
@@ -78,8 +78,11 @@ body{
           .slides {
             display: flex;
           }
-          
-          
+          @media screen and (max-width: 480px){
+              body
+                  font-size: 14px;
+          }
+}
 @media screen and (max-width: 768px) {
   header h1 {
       padding: 10px;
