--- a/styles.css
+++ b/styles.css
@@ -81,6 +81,7 @@ body{
           @media screen and (max-width: 480px){
               body{
                   font-size: 14px;
+                  padding: 10px;
           }
 }
 @media screen and (max-width: 768px) {
