--- a/styles.css
+++ b/styles.css
@@ -132,6 +132,11 @@ body{
     padding: 0.375rem 0.75rem;
   }
 }
+@media (max-width: 480px) {
+  .search-bar {
+    padding: 0.375rem 0.75rem;
+  }
+}
 
 .carousel-item {
   display: flex;
