--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body{
-    background-color:rgb(224, 86, 183);
+    background-color:white;
     background-repeat:round;
 }
         nav ul {
@@ -55,8 +55,8 @@ body{
             text-align: center;
         }
         .img_deg{
-            width:800px;
-            height:500px;
+            width:1000px;
+            height:700px;
         }
         p{
             font-family: Arial, Helvetica, sans-serif;
@@ -69,10 +69,11 @@ body{
           }
           
           .slider {
-            position: relative;
+            position: absolute;
             width: 100%;
             overflow: hidden;
             margin: 50px auto;
+              z-index:1;
           }
           
           .slides {
