--- a/styles.css
+++ b/styles.css
@@ -79,6 +79,7 @@ box-shadow: 3px 2px 18px 1px rgba(180, 180, 180, 0.34);
         .img_deg{
             width:fit-content;
             height:700px;
+            background-size:cover;
         }
         p{
             font-family: Arial, Helvetica, sans-serif;
