--- a/styles.css
+++ b/styles.css
@@ -77,7 +77,10 @@ box-shadow: 3px 2px 18px 1px rgba(180, 180, 180, 0.34);
             text-align: center;
         }
         .img_deg{
-            background-size:cover;
+            display:block;
+            width:100%;
+            height:500px;
+            object-fit:cover;
         }
         p{
             font-family: Arial, Helvetica, sans-serif;
