--- a/styles.css
+++ b/styles.css
@@ -79,6 +79,7 @@ box-shadow: 3px 2px 18px 1px rgba(180, 180, 180, 0.34);
         .img_deg{
             display:block;
             width:100%;
+            max-width: 100%;
             height:700px;
             object-fit:cover;
         }
@@ -129,8 +130,8 @@ box-shadow: 3px 2px 18px 1px rgba(180, 180, 180, 0.34);
   }
 @media screen and (max-width: 480px){
     .img_deg{
-        width:400px;
-        height:250px;
+        width:100%;
+        height:100%;
     }
     .img_pos{
         width:100px;
