--- a/styles.css
+++ b/styles.css
@@ -68,11 +68,10 @@ button.prev, button.next {
             text-align: center;
         }
         .img_deg{
-            display:block;
             width:100%;
-            max-width: 100%;
-            height:700px;
-            object-fit:cover;
+            height:500px;
+            background-fit: cover;
+        
         }
         p{
             font-family: Arial, Helvetica, sans-serif;
