--- a/styles.css
+++ b/styles.css
@@ -68,7 +68,7 @@ button.prev, button.next {
             text-align: center;
         }
         .img_deg{
-            width:100%;
+            width:800px;
             height:500px;
             background-fit: cover;
         
