--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body{
-    background-color:grey;
+background-color:rgb(224, 86, 183);
     background-repeat:round;
 }
         nav ul {
@@ -46,9 +46,6 @@ body{
             border-radius: 5px;
             cursor: pointer;
         }
-
-}
-
         .img_pos{
             float: right;
             width: 180px;
@@ -58,10 +55,8 @@ body{
             text-align: center;
         }
         .img_deg{
-            width:1000px;
+            width:800px;
             height:500px;
-
-        
         }
         p{
             font-family: Arial, Helvetica, sans-serif;
@@ -74,27 +69,20 @@ body{
           }
           
           .slider {
-            position: absolute;
+            position: relative;
             width: 100%;
             overflow: hidden;
             margin: 50px auto;
-        
           }
           
           .slides {
             display: flex;
           }
-          @media screen and (max-width: 480px){
-              body{
-                  font-size: 14px;
-                  padding: 10px;
-          }
-}
+          
+          
 @media screen and (max-width: 768px) {
-   h1 {
-       font-size: 24px;
+  header h1 {
       padding: 10px;
-       
   }
   
   nav ul li {
@@ -104,20 +92,10 @@ body{
 }
 
 @media screen and (max-width: 480px) {
-   h1 {
+  header h1 {
       font-size: 24px;
-       padding: 10px;
   }
-@media screen and (max-width: 480px){
-    .img_deg{
-        width:500%;
-        height:250%;
-    }
-    .img_pos{
-        width:100px;
-        height:70px;
-    }
-}
+
   nav ul {
       text-align: center;
   }
@@ -138,11 +116,6 @@ body{
     padding: 0.375rem 0.75rem;
   }
 }
-@media (max-width: 480px) {
-  .search-bar {
-    padding: 0.375rem 0.75rem;
-  }
-}
 
 .carousel-item {
   display: flex;
@@ -153,7 +126,6 @@ body{
   object-fit: cover;
 }
 .carousel-container {
-    display:flex;
   position: relative;
   width: 100%;
   height: 100%;
