--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body{
     margin: auto;
     padding: 0%;
     font-family:  'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color:burlywood;
+    background-color:rgb(153, 148, 151);
 }
 
 header {
@@ -29,18 +29,6 @@ header {
     float: left;
     background-color: white;
 }
- 
-.cart-icon{
-    float: right;
-}
-
-.navbar{
-    left:20px;
-    width: calc((100% - 40px));
-    position: relative;
-    height:45px;
-    display: block;
-}
 
 .border{
     position:relative;
@@ -50,50 +38,6 @@ header {
     opacity: 0.8;
     border-radius:20px;
     animation: width-adjust-borders 3s;
-}
-.navbar-content a:not(.shop-dropdown a){
-    text-align: center;
-    width: 60px;
-    display: block;
-    position: relative;
-    float:left;
-    padding-top: 10px;
-    height: 30px;
-    text-decoration: none;
-    color: black;
-}
-.navbar-content .dropdown-container{
-    position: relative;
-    float:left;
-    text-align: center;
-}
-.navbar-content a:not(.shop-dropdown a):hover{
-    background-color: rgb(130, 228, 138, 0.5);
-    opacity:1;
-    animation: fade-background 2s;
-    border-bottom: 2px solid rgba(130, 130, 130, 0.509);
-    border-radius: 3px;
-}
-
-.shop-dropdown-columns{
-    width:150px;
-    padding-left: 20px;
-    height:260px;
-    float: left;
-}
-.first-column-container{
-    transition: 0.4s;
-    border-right: solid grey;
-}
-.shop-dropdown-columns a{
-    display: block;
-    position:relative;
-    padding: 10px 0px;
-    text-decoration: none;
-    color: black;
-}
-.shop-dropdown-columns a:hover{
-    border-bottom: solid grey;
 }
 .first-column-container .first-row{
     padding-bottom: 50px;
