--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,10 @@ header {
     text-align: center;
     padding: 8px 0;
 }
-
+.img_pos{
+            float: right;
+            width: 180px;
+            height: 140px;
 #heading{
     font-size: 50px;
     text-align: center;
