--- a/styles.css
+++ b/styles.css
@@ -55,9 +55,12 @@ background-color:rgb(153, 148, 151);
             text-align: center;
         }
         .img_deg{
-            width:1000px;
+            width:1500px;
             height:700px;
         }
+.img_loc{
+    width:1500px;
+    height:700px;
         p{
             font-family: Arial, Helvetica, sans-serif;
             color: rgb(8, 1, 26);
