--- a/styles.css
+++ b/styles.css
@@ -79,6 +79,9 @@ background-color:rgb(153, 148, 151);
   header h1 {
       padding: 10px;
   }
+      .img_deg{
+            width:1000px;
+            height:600px;
   nav ul li {
       display: block;
       margin-bottom: 10px;
@@ -89,6 +92,9 @@ background-color:rgb(153, 148, 151);
   header h1 {
       font-size: 24px;
   }
+      .img_deg{
+            width:450px;
+            height:250px;
 
   nav ul {
       text-align: center;
