--- a/styles.css
+++ b/styles.css
@@ -55,8 +55,8 @@ background-color:rgb(153, 148, 151);
             text-align: center;
         }
         .img_deg{
-            width:1200px;
-            height:700px;
+            width:1500px;
+            height:800px;
         }
         p{
             font-family: Arial, Helvetica, sans-serif;
@@ -74,7 +74,11 @@ background-color:rgb(153, 148, 151);
             display: flex;
           }
         
-          
+          @media screen and (max-width: 1440px) {
+              .img_deg{
+            width:1200px;
+            height:700px;
+        }
 @media screen and (max-width: 768px) {
   header h1 {
       padding: 10px;
